--- a/sections/sold-out-banner.liquid
+++ b/sections/sold-out-banner.liquid
@@ -20,7 +20,7 @@
     <div class="container">
       <div class="content">
         <div class="lastHours">
-          <span class="icon">{{ s.icon_text }}</span>
+          {{ s.icon_svg }}
           <p class="mainText">{{ s.main_text }}</p>
         </div>
         
@@ -42,10 +42,11 @@
         "content": "Conteúdo"
       },
       {
-        "type": "text",
-        "id": "icon_text",
-        "label": "Ícone (Emoji)",
-        "default": "⏰"
+        "type": "html",
+        "id": "icon_svg",
+        "label": "Ícone (SVG)",
+        "default": "<svg width=\"11\" height=\"14\" viewBox=\"0 0 11 14\" fill=\"none\" xmlns=\"http://www.w3.org/2000/svg\"> <path d=\"M2.99984 8.33329C3.44186 8.33329 3.86579 8.1577 4.17835 7.84514C4.49091 7.53258 4.6665 7.10865 4.6665 6.66663C4.6665 5.74663 4.33317 5.33329 3.99984 4.66663C3.28517 3.23796 3.8505 1.96396 5.33317 0.666626C5.6665 2.33329 6.6665 3.93329 7.99984 4.99996C9.33317 6.06663 9.99984 7.33329 9.99984 8.66663C9.99984 9.27946 9.87913 9.8863 9.64461 10.4525C9.41009 11.0187 9.06634 11.5331 8.633 11.9665C8.19966 12.3998 7.68521 12.7435 7.11903 12.9781C6.55284 13.2126 5.94601 13.3333 5.33317 13.3333C4.72034 13.3333 4.1135 13.2126 3.54731 12.9781C2.98113 12.7435 2.46668 12.3998 2.03334 11.9665C1.6 11.5331 1.25625 11.0187 1.02173 10.4525C0.787211 9.8863 0.666504 9.27946 0.666504 8.66663C0.666504 7.89796 0.955171 7.13729 1.33317 6.66663C1.33317 7.10865 1.50877 7.53258 1.82133 7.84514C2.13389 8.1577 2.55781 8.33329 2.99984 8.33329Z\" stroke=\"#FF6900\" stroke-width=\"1.33333\" stroke-linecap=\"round\" stroke-linejoin=\"round\"/></svg>"
+        
       },
       {
         "type": "text",
