--- a/assets/sold-out-banner.css
+++ b/assets/sold-out-banner.css
@@ -12,6 +12,7 @@
   justify-content: center;
   padding: 24px 192px;
   box-sizing: border-box;
+  justify-content: space-between;
 }
 
 .container {
@@ -24,9 +25,10 @@
 
 .content {
   display: flex;
-  align-items: center;
+  align-items: start;
   gap: 8px;
   position: relative;
+  justify-content: space-between;
   height: 100%;
 }
 
@@ -62,11 +64,18 @@
   margin-left: auto;
 }
 
+.icon svg {
+  display: block;
+  width: 1em;
+  height: 1em;
+}
+
+.icon {
+  color: #FF6900;
+  line-height: 0;
+}
+
 .progressBar {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
   height: 8px;
   background: var(--color-border);
   border-radius: 100px;
@@ -93,7 +102,7 @@
     height: auto;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     gap: 16px; 
   }
 
@@ -106,7 +115,7 @@
   .lastHours {
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
     gap: 12px;
   }
 
