--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -163,7 +163,7 @@
   <a class="in-page-link visually-hidden skip-link" href="#MainContent">{{ 'general.accessibility.skip_to_content' | t }}</a>
 
   {% section 'header' %}
-  {% section 'sold-out-banner' %}
+  {% section 'Banner-reajust' %}
 
   <main role="main" id="MainContent">
     {{ content_for_layout }}
